Update Google Analytics Measurement ID
adding ID from Google Analytics to GA_Script.html

--- a/GA_Script.html
+++ b/GA_Script.html
@@ -1,10 +1,9 @@
-  
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id={MeasurementID}"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JNGHQTNTD7"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', '{MeasurementID}');
+  gtag('config', 'G-JNGHQTNTD7');
 </script>
